Fix for too long text in buttons

--- a/src/components/buttons/_buttons-mixins.scss
+++ b/src/components/buttons/_buttons-mixins.scss
@@ -23,7 +23,8 @@ $buttonActiveScale: scale(0.985);
   user-select: none;
   outline-width: 0;
   text-decoration: none;
-  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
   font-weight: $fontWeightBold;
   text-transform: uppercase;
   box-shadow: $buttonBoxShadow;
